--- a/index.html
+++ b/index.html
@@ -2,15 +2,25 @@
 
 <head>
 	<title>SketchPad</title>
-	<link type = "stylesheet" href = "styles/styles.css"/>
+	<link rel="stylesheet" type = "text/css" href = "styles/styles.css"/>
+
 </head>
 <body>
 
 <h1> SketchPad</h1>
-<div class = "grid">
+<div id = "grid">
+
 
 </div>
+<div id = "buttons">
+	<div class = "button">
+		<button type = "button" id = "clear">Clear</button>
+		<button type = "button" id = "color">Random Colours</button>
+	</div>
+</div>
 
+<script src = 'https://code.jquery.com/jquery-3.1.0.min.js'></script>
+<script src = 'scripts/main.js'></script>
 
 </body>
 
