--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-
+<html>
 <head>
 	<title>SketchPad</title>
 	<link rel="stylesheet" type = "text/css" href = "styles/styles.css"/>
@@ -19,11 +19,11 @@
 	</div>
 </div>
 
-<script src = 'https://code.jquery.com/jquery-3.1.0.min.js'></script>
+<script src = 'https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js'></script>
 <script src = 'scripts/main.js'></script>
 
 </body>
-
+</html>
 
 
 
