--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
 
 <h1> SketchPad</h1>
+<div id = "content">
 <div id = "grid">
 
 
@@ -17,6 +18,7 @@
 		<button type = "button" id = "clear">Clear</button>
 		<button type = "button" id = "color">Random Colours</button>
 	</div>
+</div>
 </div>
 
 <script src = 'https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js'></script>
